--- a/views/home.pug
+++ b/views/home.pug
@@ -1,9 +1,8 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-    body 
-        h1 hello
+extends template.pug
+
+append content 
+    .mainSection 
+        .title WordVault
+        .textArea 
+            h3 write a sentence
+            textarea(name="", cols="30", rows="10") 
