--- a/views/home.pug
+++ b/views/home.pug
@@ -5,4 +5,7 @@ append content
         .title WordVault
         .textArea 
             h3 write a sentence
-            textarea(name="", cols="30", rows="10") 
+            form(action="") 
+                textarea(name="", cols="30", rows="10")
+                br
+                input(type="submit", value="Get Value") 
