--- a/views/Add.pug
+++ b/views/Add.pug
@@ -1,12 +1,14 @@
 extends template.pug
+append script 
+    script(src="../static/js/add.js") 
 append content 
     .mainSection 
         .title Add new words
         .textarea
             br
-            form(action="")
-                input(type="text" name="word" placeholder="word")
+            form(action="")#addForm
+                input(type="text" name="word" placeholder="word").input
                 br
-                input(type="number" name="value" placeholder="value") 
+                input(type="number" name="value" placeholder="value").input 
                 br
-                input(type="submit", value="Done")
+                input(type="submit", value="Done" onclick="addWord()").submit
