--- a/views/template.pug
+++ b/views/template.pug
@@ -7,7 +7,8 @@ html(lang="en")
         title #{title}
         style 
             include ../public/css/style.css
-        script(src="../static/js/navbar.js") 
+        block script    
+        script(src="../static/js/onload.js") 
     body(onload="nav()")
         block content
             .navbar 
