--- a/views/visualize.pug
+++ b/views/visualize.pug
@@ -1,4 +1,8 @@
-extends template 
+extends template
+append script 
+    script(src="../static/js/visualize.js") 
 append content 
     .mainSection 
         .title Visualize Your Words
+        .textArea 
+            h3 your words
