--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,3 +78,11 @@ input{
     margin-bottom: 8px;
     padding: 8px 16px;
 }
+.words{
+    width:100%;
+    background: #000;
+    display: block;
+    color:#fff;
+    text-align: left;
+    height: 30vh;
+}
